--- a/src/static/index.html
+++ b/src/static/index.html
@@ -39,6 +39,13 @@
         </form>
         <div id="message" class="hidden"></div>
       </section>
+
+      <section id="mascot-container">
+        <h3>Our Mascots</h3>
+        <div id="mascots">
+          <img src="https://octodex.github.com/images/oktobercat.png" alt="Oktobercat" />
+        </div>
+      </section>
     </main>
 
     <footer>
