Update header alignment and refine background styles to enhance school branding
Added oktobercat as mascot

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header style="text-align: center;">
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
+      <img src="https://octodex.github.com/images/oktobercat.png" alt="Oktobercat" style="width: 200px; height: auto;" />
     </header>
 
     <main>
@@ -38,13 +39,6 @@
           <button type="submit">Sign Up</button>
         </form>
         <div id="message" class="hidden"></div>
-      </section>
-
-      <section id="mascot-container">
-        <h3>Our Mascots</h3>
-        <div id="mascots">
-          <img src="https://octodex.github.com/images/oktobercat.png" alt="Oktobercat" />
-        </div>
       </section>
     </main>
 
