Update Add Activity form to include start and end time fields, and adjust HTML for dynamic schedule fields

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -85,7 +85,7 @@
           <textarea id="activity-description" name="activity-description" required></textarea>
 
           <label for="activity-schedule">Schedule:</label>
-          <input type="text" id="activity-schedule" name="activity-schedule" required>
+          <!-- Schedule fields will be dynamically added by JavaScript -->
 
           <label for="activity-category">Category:</label>
           <input type="text" id="activity-category" name="activity-category" required>
